Revise README for My Desktop Planner
Updated README to enhance project description and features.